--- a/static/style.css
+++ b/static/style.css
@@ -20,21 +20,24 @@
 @font-face {
     font-family: "Maple Mono";
     src:
-            local("Maple Mono Italic"),
-            url("fonts/MapleMono-Italic.ttf") format("truetype");
+        local("Maple Mono Italic"),
+        url("fonts/MapleMono-Italic.ttf") format("truetype");
     font-style: italic;
 }
 
 @font-face {
     font-family: "Maple Mono";
     src:
-            local("Maple Mono"),
-            url("fonts/MapleMono.ttf") format("truetype");
+        local("Maple Mono"),
+        url("fonts/MapleMono.ttf") format("truetype");
     font-style: normal;
 }
+
 @font-face {
     font-family: "Nishiki teki";
-    src: local("Nishiki-teki"), url("fonts/NishikiTeki.ttf") format("truetype");
+    src:
+        local("Nishiki-teki"),
+        url("fonts/NishikiTeki.ttf") format("truetype");
 }
 
 :root {
@@ -83,8 +86,14 @@
     );
     --text: light-dark(rgb(var(--secondary-900)), rgb(var(--primary-200)));
     --subtext: light-dark(rgb(var(--secondary-700)), rgb(var(--primary-300)));
-    --anchor:  light-dark( hsl(from rgb(var(--secondary-700)) calc(h - 10) calc(s + 10) l), hsl(from rgb(var(--secondary-400)) calc(h - 10) calc(s + 10) l));
-    --anchor-visited:  light-dark( hsl(from rgb(var(--primary-700)) calc(h + 10) s l), hsl(from rgb(var(--primary-400)) calc(h + 10) s l));
+    --anchor: light-dark(
+        hsl(from rgb(var(--secondary-700)) calc(h - 10) calc(s + 10) l),
+        hsl(from rgb(var(--secondary-400)) calc(h - 10) calc(s + 10) l)
+    );
+    --anchor-visited: light-dark(
+        hsl(from rgb(var(--primary-700)) calc(h + 10) s l),
+        hsl(from rgb(var(--primary-400)) calc(h + 10) s l)
+    );
     --anchor-active: light-dark(
         rgb(var(--primary-950)),
         rgb(var(--primary-100))
@@ -123,7 +132,8 @@ body {
     grid-template-rows: auto 1fr auto;
 }
 
-main, .page {
+main,
+.page {
     flex-grow: 1;
     font-family: var(--font-body);
     margin: 1rem auto;
@@ -188,6 +198,7 @@ code {
     font-weight: 400;
     font-size: 10pt;
 }
+
 samp {
     font-family: var(--font-mono);
     font-weight: 400;
@@ -222,7 +233,6 @@ hr::after {
     position: relative;
     top: -10px;
 }
-
 
 #title {
     font-size: 2rem;
@@ -347,7 +357,6 @@ pre {
     font-family: var(--font-mono);
     overflow-x: scroll;
 
-    /*display: flex;*/
     & b {
         font-weight: 500;
     }
@@ -440,7 +449,7 @@ pre[lang="ansi"] {
 
     .links {
         display: flex;
-        flex-direction: row;
+        flex-flow: row wrap;
         gap: 0.2em;
         justify-content: space-evenly;
         margin: 0.2em;
