--- a/static/style.css
+++ b/static/style.css
@@ -1,11 +1,47 @@
 @import url("nav.css");
 @import url("dialog.css");
 
+/* vietnamese */
+@font-face {
+    font-family: "Hepta Slab";
+    font-style: normal;
+    font-weight: 1 900;
+    font-display: swap;
+    src: url("/static/fonts/HeptaSlab-VariableFont_wght.ttf") format("truetype");
+    unicode-range:
+        U+0102-0103, U+0110-0111, U+0128-0129, U+0168-0169, U+01A0-01A1,
+        U+01AF-01B0, U+0300-0301, U+0303-0304, U+0308-0309, U+0323, U+0329,
+        U+1EA0-1EF9, U+20AB;
+}
+/* latin-ext */
+@font-face {
+    font-family: "Hepta Slab";
+    font-style: normal;
+    font-weight: 1 900;
+    font-display: swap;
+    src: url("/static/fonts/HeptaSlab-VariableFont_wght.ttf") format("truetype");
+    unicode-range:
+        U+0100-02BA, U+02BD-02C5, U+02C7-02CC, U+02CE-02D7, U+02DD-02FF, U+0304,
+        U+0308, U+0329, U+1D00-1DBF, U+1E00-1E9F, U+1EF2-1EFF, U+2020,
+        U+20A0-20AB, U+20AD-20C0, U+2113, U+2C60-2C7F, U+A720-A7FF;
+}
+/* latin */
+@font-face {
+    font-family: "Hepta Slab";
+    font-style: normal;
+    font-weight: 1 900;
+    font-display: swap;
+    src: url("/static/fonts/HeptaSlab-VariableFont_wght.ttf") format("truetype");
+    unicode-range:
+        U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC,
+        U+0304, U+0308, U+0329, U+2000-206F, U+20AC, U+2122, U+2191, U+2193,
+        U+2212, U+2215, U+FEFF, U+FFFD;
+}
 @font-face {
     font-family: "DM Sans";
     src:
         local("DM Sans"),
-        url("../static/fonts/DMSans-VariableFont_opsz,wght.ttf")
+        url("/static/fonts/DMSans-VariableFont_opsz,wght.ttf")
             format("truetype");
 }
 
@@ -13,7 +49,7 @@
     font-family: "DM Sans Italic";
     src:
         local("DM Sans Italic"),
-        url("../static/fonts/DMSans-Italic-VariableFont_opsz,wght.ttf")
+        url("/static/fonts/DMSans-Italic-VariableFont_opsz,wght.ttf")
             format("truetype");
 }
 
@@ -21,7 +57,7 @@
     font-family: "Maple Mono";
     src:
         local("Maple Mono Italic"),
-        url("fonts/MapleMono-Italic.ttf") format("truetype");
+        url("/static/fonts/MapleMono-Italic.ttf") format("truetype");
     font-style: italic;
 }
 
@@ -29,7 +65,7 @@
     font-family: "Maple Mono";
     src:
         local("Maple Mono"),
-        url("fonts/MapleMono.ttf") format("truetype");
+        url("/static/fonts/MapleMono.ttf") format("truetype");
     font-style: normal;
 }
 
@@ -37,7 +73,7 @@
     font-family: "Nishiki teki";
     src:
         local("Nishiki-teki"),
-        url("fonts/NishikiTeki.ttf") format("truetype");
+        url("/static/fonts/NishikiTeki.ttf") format("truetype");
 }
 
 :root {
@@ -84,6 +120,7 @@
         rgb(var(--primary-50)),
         rgb(var(--secondary-975))
     );
+    --text-hard: light-dark(rgb(var(--secondary-900)), rgb(var(--primary-100)));
     --text: light-dark(rgb(var(--secondary-900)), rgb(var(--primary-200)));
     --subtext: light-dark(rgb(var(--secondary-700)), rgb(var(--primary-300)));
     --anchor: light-dark(
@@ -116,7 +153,7 @@ html {
 *,
 *::before,
 *::after {
-    box-sizing: inherit;
+    box-sizing: border-box;
 }
 
 body {
@@ -132,14 +169,41 @@ body {
     grid-template-rows: auto 1fr auto;
 }
 
+main > :first-child {
+    margin-top: 0;
+    margin-block-start: 0;
+}
+
+main > :last-child {
+    margin-bottom: 0;
+    margin-block-end: 0;
+}
+
+main {
+    padding-top: 0.33rem;
+    padding-bottom: 0.33rem;
+}
+
 main,
 .page {
     flex-grow: 1;
     font-family: var(--font-body);
     margin: 1rem auto;
     background: var(--plain-bg);
+    border: 1px solid light-dark(var(--subtext), var(--bg-surface0));
+    box-shadow: 0.3rem 0.5rem
+        light-dark(
+            hsl(
+                from rgb(var(--secondary-900)) calc(h - 10) calc(s + 10)
+                    calc(l + 10)
+            ),
+            hsl(
+                from rgb(var(--secondary-950)) calc(h + 40) calc(s + 80)
+                    calc(l - 10)
+            )
+        );
     width: var(--max-width);
-    padding: 1rem;
+    padding: 1.5rem 1rem;
 
     /*
       Needed, otherwise .wrapper grid will use `min-width: min-content`.
@@ -154,6 +218,7 @@ main,
         & {
             width: 100%;
             margin: 0 auto;
+            border: none;
         }
     }
 
@@ -187,13 +252,30 @@ h3,
 h4,
 h5,
 h6 {
-    font-family: var(--font-mono);
-    font-style: italic;
-    font-weight: 500;
-    margin-bottom: 0.5rem;
+    font-family: "Hepta Slab", serif;
+    /* font-optical-sizing: auto; */
+    font-style: normal;
+    font-weight: 450;
+    margin-block-start: 1.5rem;
+    margin-block-end: 0.5rem;
 }
 
-code {
+/* h1.blog-head,
+h1.page-head {
+    margin-block-start: 0.33rem;
+} */
+
+span.blog-subhead {
+    font-family: "Hepta Slab", serif;
+}
+
+p,
+ul,
+ol {
+    margin-block-start: 0.5rem;
+    margin-block-end: 1rem;
+}
+p code {
     font-family: var(--font-mono);
     font-weight: 400;
     font-size: 10pt;
@@ -470,12 +552,20 @@ pre[lang="ansi"] {
 }
 
 blockquote {
-    border-radius: 1em;
-    border: 1px solid var(--border);
-    border-left: 0.3em solid var(--border);
-    padding: 0.1em 0.7em;
-    background-color: var(--bg);
+    color: var(--text-hard);
+    border-radius: 1rem;
+    border-right: 1px solid var(--bg);
+    border-left: 0.3rem solid var(--border);
+    padding: 0.1rem 0.7rem;
+    background-color: var(--bg-surface0);
+    box-shadow: 0 0.1rem var(--bg);
     word-break: break-all;
+}
+
+blockquote.small {
+    border-radius: 0.2rem;
+    margin: 0 0.25em;
+    padding: 0.25em;
 }
 
 bsky-comments {
