text-wrap: pretty;

--- a/static/style.css
+++ b/static/style.css
@@ -152,6 +152,13 @@ body {
     color: var(--text);
 }
 
+p,
+blockquote,
+h1,
+h2,
+h3 {
+    text-wrap: pretty;
+}
 .wrapper {
     min-height: 100vh;
     display: grid;
