--- a/static/style.css
+++ b/static/style.css
@@ -1,6 +1,3 @@
-@import url("nav.css");
-@import url("dialog.css");
-
 /* vietnamese */
 @font-face {
     font-family: "Hepta Slab";
@@ -574,6 +571,8 @@ figcaption {
 }
 
 div.code-toolbar {
+    color-scheme: dark;
+
     position: relative;
     margin: 1em 0px;
     border: 1px solid var(--border);
@@ -581,6 +580,8 @@ div.code-toolbar {
     overflow: hidden;
 
     .toolbar {
+        color-scheme: light;
+
         background-color: var(--bg);
 
         border-bottom-left-radius: 0.5rem;
